# Programming-challenges-in-C

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
000-unit-converter/: CMakeLists.txt  convs.c  convs.h  main.c
001-word-counter/: CMakeLists.txt  example.txt  main.c
002-clock/: CMakeLists.txt  main.c
